# Top-20-Python

./: .gitignore  Outline.docx  README.md  Tasks.xlsx  Top 20 Python Proposal.docx  sql_app.db  test.db  ~$p 20 Python Proposal.docx
Exercises/Chapter 19 - Documenting Your Code/webgiscontentsearch/: pyproject.toml  readme.md
Exercises/Chapter 19 - Documenting Your Code/webgiscontentsearch/docs/: _config.yml  _toc.yml  index.md
Exercises/Chapter 19 - Documenting Your Code/webgiscontentsearch/docs/_build/.doctrees/: environment.pickle  index.doctree
Exercises/Chapter 19 - Documenting Your Code/webgiscontentsearch/docs/_build/.doctrees/getting_started/: index.doctree  introduction.doctree
Exercises/Chapter 19 - Documenting Your Code/webgiscontentsearch/docs/_build/.doctrees/reference/: gis_inventory.doctree  index.doctree
Exercises/Chapter 19 - Documenting Your Code/webgiscontentsearch/docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js
Exercises/Chapter 19 - Documenting Your Code/webgiscontentsearch/docs/_build/html/_modules/: index.html
Exercises/Chapter 19 - Documenting Your Code/webgiscontentsearch/docs/_build/html/getting_started/: index.html  introduction.html
Exercises/Chapter 19 - Documenting Your Code/webgiscontentsearch/docs/_build/html/reference/: gis_inventory.html  index.html
Exercises/Chapter 19 - Documenting Your Code/webgiscontentsearch/docs/getting_started/: introduction.ipynb
Exercises/Chapter 19 - Documenting Your Code/webgiscontentsearch/docs/reference/: index.md
(+316 files in other folders)
